# stat-api

./: .dockerignore  .env.example  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.MD  README.md  TEST_COVERAGE_REPORT.md  admin_creation.py  alembic.ini  amvera.yml  config.example.yaml  config.py  config.yaml  create_envfile  database.py  docker-compose.yaml  fill_nav_data.py  main.py  methods.py  migrate_to_new_event_system.py  migrate_to_pg.py  models.py  pyproject.toml  requirements.txt  schemas.py  shell.nix  state.py  test.sh  test_parse_rasp.py
.github/workflows/: docker-dev.yaml  docker-prod.yaml  docker.yaml  test.yaml  update-submodule.yaml
alembic/: env.py
alembic/versions/: 0b3c6f43b38c_add_new_right_and_dep_to_admin.py  1d4cf4d7f8aa_create_dod_navigation_tables.py  20250103T164020_initial_commit.py  20250324T123157_add_review_and_problem_tables.py  20250528T180802_new_field for started_ways.py  20250930T171208_add_role_based_auth_models.py  20251012T140501_fill_default_roles_goals_and_rights.py  20251123T194234_create_tables_for_navigation_data.py  20251130T123501_update_database_scheme_to_hold_status_.py  20260111T000000_add_tables_for_tg_bot_stats.py  20260222T010836_add_fio_and_dates_to_users.py  20260301T124500_add_aud_photo_and_drop_photo_id_from_.py  20260311T130500_create_dod_navigation_tables.py  20260315T202305_add_creation_date_to_tg_users.py  20260319T150123_fix_tg_bot_data.py  20260320T203308_add_new_permisions_to_admin.py  20260406T015333_authentication_jwt_access_refresh_tokens.py  20260415T213000_create_new_event_system_tables.py  20260415T213500_seed_new_event_system_dicts.py  20260422T164700_add_can_grant_to_role_right_goals.py  20260422T180000_add_client_goal_and_admin_rights.py  20260427T162649_add_new_right_to_admin.py  20260429T000000_add_stats_rights_and_review_client_id.py  20260504T041142_drop_all_old_tables.py  20260505T172255_add_user_action_log_table.py  20260506T190000_create_dashboard_tables.py  20260506T190500_seed_dashboard_types.py  20260511T223823_deleting_all_dod_models.py  213a69474d75_drop_all_old_tables.py  266183bb48a0_added_startway_model.py  339fbd54bbee_add_user_action_log_table.py  3bce90c96a6a_populate_plans.py  4acb0863f0c4_create_tables_for_navigation_data.py  54cc0e9009ab_fill_default_roles_goals_and_rights.py  6080e7ca7e97_add_fio_and_dates_to_users.py  63ec4b49750b_add_role_based_auth_models.py  6a42eecaed1b_create_tables_for_navigation_data.py  7f385d04c10a_add_creation_date_to_tg_users.py  811554982f66_added_plan_and_changeplan_models.py  84c9b51dc5fc_fix_tg_bot_data.py  (+18 more)
app/: __main__.py  app.py  config.py  constants.py  database.py  default_hooks.py  factory.py  globals.py  hooks.py  logging.py  methods.py  models.py  state.py
app/cli/: main.py
app/graphql/: mutation.py  query.py  schema.py
app/guards/: file_checker.py  governor.py  review_governor.py
app/handlers/: __init__.py  check.py  create.py  event.py  filter.py  gather_rights.py  get.py  insert.py  review.py  schedule.py  update.py
app/helpers/: auth_utils.py  data.py  db.py  dsn.py  errors.py  get_graph.py  parser.py  path.py  permissions.py  seeder.py  spa_static_files.py  svg.py  svobodn.py  thumbnail.py  token_utils.py
app/jobs/: __init__.py  manager.py  queue_db.py
app/models/: __init__.py  auditory.py  auth.py  base.py  change_plan.py  dashboard.py  event.py  floor_map.py  goal.py  nav.py  plan.py  problem.py  review.py  review_status.py  right.py  (+8 more)
scripts/: __init__.py
tests/: base.py  config.test.yaml  hooks.py  init_db.py  load_graph.py  schedule_test.json  test_200_check.py  test_200_get.py  test_404.py  test_422.py  test_429.py  test_analytics_handlers.py  test_auth.py  test_config.py  test_free_aud.py  test_graphql_logging.py  test_jobs.py  test_location_data.py  test_nav.py  test_nav_auditory_photos.py  test_review.py  test_schedule.py  test_user_logger_service.py
(+362 files in other folders)
