[project]
name = "stat-api"
version = "0.3.0"
description = "Бэкенд для нужд проекта mospolynavigation"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "alembic",
    "fastapi",
    "strawberry-graphql",
    "httpx",
    "python-dotenv",
    "python-multipart",
    "sqlalchemy[asyncio]",
    "uuid",
    "uvicorn",
    "pydantic-settings",
    "apscheduler",
    "pwdlib[argon2]",
    "argparse",
    "transliterate",
    "aiosqlite",
    "asyncpg",
    "pillow",
    "PyJWT",
    "user-agents",
    "pyyaml",
    "pydantic",
    "graphql-core",
    "starlette",
    "typer",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]
lint = [
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Включаем пакет app
packages = ["app"]
# Включаем main.py как топ-уровень модуль (чтобы работало main:app_cli)
py-modules = ["main"]

[project.scripts]
stat-api = "main:app_cli"
