[project]
name = "stat-api"
version = "0.4.0"
description = "Бэкенд для нужд проекта mospolynavigation"
requires-python = ">=3.12"
dependencies = [
    "aiofiles~=25.1.0",
    "alembic~=1.18.4",
    "fastapi~=0.136.1",
    "strawberry-graphql~=0.315.3",
    "httpx~=0.28.1",
    "python-dotenv~=1.2.2",
    "python-multipart~=0.0.28",
    "sqlalchemy[asyncio]~=2.0.49",
    "uvicorn~=0.46.0",
    "pydantic-settings~=2.14.1",
    "apscheduler~=3.11.2",
    "pwdlib[argon2]~=0.3.0",
    "transliterate~=1.10.2",
    "aiosqlite~=0.22.1",
    "asyncpg~=0.31.0",
    "pillow~=12.2.0",
    "PyJWT~=2.12.1",
    "user-agents~=2.2.0",
    "pyyaml~=6.0.3",
    "pydantic~=2.13.4",
    "graphql-core~=3.2.8",
    "starlette~=1.0.0",
    "typer~=0.25.1",
]

[dependency-groups]
dev = [
    "pytest~=9.0.3",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.1.0",
]
lint = [
    "ruff~=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Включаем пакет app
packages = ["app"]
# Включаем main.py как топ-уровень модуль (чтобы работало main:app_cli)
py-modules = ["main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"  # или "strict"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "mutation.py", "query.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.scripts]
stat-api = "main:app_cli"

[tool.ruff.lint]
ignore = ["E402", "SLF001"]
