[project]
name = "stat-api"
version = "0.4.1"
description = "Бэкенд для нужд проекта mospolynavigation"
requires-python = ">=3.12"
dependencies = [
    "aiofiles~=25.1.0",
    "alembic~=1.18.4",
    "fastapi~=0.139.0",
    "strawberry-graphql~=0.322.0",
    "python-dotenv~=1.2.2",
    "python-multipart~=0.0.28",
    "sqlalchemy[asyncio]~=2.0.49",
    "uvicorn~=0.51.0",
    "pydantic-settings~=2.14.1",
    "apscheduler~=3.11.2",
    "pwdlib[argon2]~=0.3.0",
    "transliterate~=1.10.2",
    "aiosqlite~=0.22.1",
    "asyncpg~=0.31.0",
    "pillow~=12.3.0",
    "PyJWT~=2.13.0",
    "user-agents~=2.2.0",
    "pyyaml~=6.0.3",
    "pydantic~=2.13.4",
    "graphql-core~=3.2.8",
    "starlette~=1.3.1",
    "typer~=0.27.0",
    "httpx2~=2.7.0",
]

[dependency-groups]
dev = [
    "pre-commit~=4.6.0",
    "pytest~=9.1.1",
    "pytest-asyncio~=1.4.0",
    "pytest-cov~=7.1.0",
]
lint = [
    "ruff~=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"  # или "strict"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "mutation.py", "query.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.scripts]
stat-api = "app.cli.main:app_cli"

[tool.ruff.lint]
ignore = ["E402", "SLF001"]
